[DDW-1186] - Stake pool descriptions is not fully shown if it is long enough - fixes for scrollbar

--- a/source/renderer/app/components/staking/stake-pools/StakePoolTooltip.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolTooltip.scss
@@ -196,10 +196,11 @@
   font-size: 14px;
   line-height: 1.36;
   margin-bottom: 4px;
+  margin-right: -5px;
   max-height: 57px;
+  overflow-y: auto;
 
   &.scrollableDescription {
-    overflow-y: scroll;
     width: 244px;
   }
 }
